--- a/templates/includes/header/partial_search_dropdown.html
+++ b/templates/includes/header/partial_search_dropdown.html
@@ -7,9 +7,11 @@
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <a class="dropdown-item" href="{% url 'ubicacion:sedes' %}">Sedes</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'ubicacion:unidades' %}">Facultades</a>
+        <a class="dropdown-item" href="{% url 'ubicacion:facultades' %}">Facultades</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'ubicacion:secciones' %}">Escuelas y Departamentos</a>
+        <a class="dropdown-item" href="{% url 'ubicacion:escuelas' %}">Escuelas</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="{% url 'ubicacion:departamentos' %}">Departamentos</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'ubicacion:carreras' %}">Carreras</a>
     </div>
