--- a/ubicacion/templates/ubicacion/sede_detail.html
+++ b/ubicacion/templates/ubicacion/sede_detail.html
@@ -7,6 +7,19 @@
 
 {% block content %}
     <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-md-12">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'ubicacion:sedes' %}">Sedes</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">{{ sede.nombre }}</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-md-3 top-buffer">
                 <div class="card">
