--- a/ubicacion/templates/ubicacion/facultadinstancia_detail.html
+++ b/ubicacion/templates/ubicacion/facultadinstancia_detail.html
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-    SIGIA - {{ unidad.unidad.nombre.capitalize }}
+    SIGIA - {{ facultad.facultad.nombre.capitalize }}
 {% endblock %}
 
 {% block head %}
@@ -13,6 +13,18 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
+            <div class="col-md-12">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'ubicacion:facultades' %}">Facultades</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">{{ facultad.facultad.nombre.capitalize }}</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-3 top-buffer">
                 <div class="card">
                     <div class="card-header">
@@ -20,7 +32,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ unidad.equipos.all.count }}</h3></p>
+                        <h3 class="text-right">{{ facultad.equipos.all.count }}</h3></p>
                     </div>
                 </div>
                 '
@@ -32,7 +44,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ unidad.secciones.escuelas.count }}</h3>
+                        <h3 class="text-right">{{ facultad.escuelas.count }}</h3>
                         </p>
                     </div>
                 </div>
@@ -44,7 +56,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ unidad.secciones.departamentos.count }}</h3>
+                        <h3 class="text-right">{{ facultad.departamentos.count }}</h3>
                         </p>
                     </div>
                 </div>
@@ -56,7 +68,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ unidad.carreras.count }}</h3>
+                        <h3 class="text-right">{{ facultad.carreras.count }}</h3>
                         </p>
                     </div>
                 </div>
@@ -69,7 +81,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cantidad de Profesores</h5>
                             <p class="card-text">
-                            <div class="text-right"><h3>{{ unidad.personal.profesores.count }}</h3></div>
+                            <div class="text-right"><h3>{{ facultad.personal.profesores.count }}</h3></div>
                             </p>
                         </div>
                     </div>
@@ -77,7 +89,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cantidad de Estudiantes</h5>
                             <p class="card-text">
-                            <div class="text-right"><h3>{{ unidad.estudiantes.count }}</h3></div>
+                            <div class="text-right"><h3>{{ facultad.estudiantes.count }}</h3></div>
                             </p>
                         </div>
                     </div>
@@ -93,7 +105,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recursos por Tipo</h5>
                             <p class="card-text">
-                            <div class="text-right"><h3>{{ unidad.personal.profesores.count }}</h3></div>
+                            <div class="text-right"><h3>{{ facultad.personal.profesores.count }}</h3></div>
                             </p>
                         </div>
                     </div>
@@ -101,7 +113,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recursos por Marca</h5>
                             <p class="card-text">
-                            <div class="text-right"><h3>{{ unidad.estudiantes.count }}</h3></div>
+                            <div class="text-right"><h3>{{ facultad.estudiantes.count }}</h3></div>
                             </p>
                         </div>
                     </div>
@@ -120,8 +132,8 @@
             return ['rgba(' + r + ',' + g + ',' + b + ',' + 0.2 + ')', 'rgba(' + r + ',' + g + ',' + b + ',' + 1.0 + ')']; //Recordar el 0.2 para el alpha.
         }
 
-        var recursosTipo = {{ unidad.get_recursos_tipo_count|safe }};
-        var recursosModelo = {{ unidad.get_recursos_modelo_count|safe }};
+        var recursosTipo = {{ facultad.get_recursos_tipo_count|safe }};
+        var recursosModelo = {{ facultad.get_recursos_modelo_count|safe }};
 
         recursosModeloSet = [];
         recursosTipoSet = [];
@@ -153,7 +165,7 @@
             data: recursosModeloSet,
             options: pieOptions
         });
-        
+
         var tipoChart = new Chart(tipoctx, {
             type: 'pie',
             data: recursosTipoSet,
