--- a/ubicacion/templates/ubicacion/sede_list.html
+++ b/ubicacion/templates/ubicacion/sede_list.html
@@ -6,6 +6,18 @@
 {% endblock %}
 {% block title %}Consultar - Sedes{% endblock %}
 {% block content %}
+
+    <div class="row">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Sedes</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-12">
             <div class="card">
