--- a/templates/includes/header/partial_escuela_dropdown.html
+++ b/templates/includes/header/partial_escuela_dropdown.html
@@ -25,7 +25,7 @@
     </a>
     {% if request.user.perfil.escuela %}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#"> Dashboard</a>
+            <a class="dropdown-item" href="{% url 'ubicacion:escuela' request.user.perfil.escuela.pk %}"> Dashboard</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#"> Reportes</a>
             {% if perms.estudiantes.ver_estudiantes %}
