--- a/ubicacion/templates/ubicacion/sede_detail.html
+++ b/ubicacion/templates/ubicacion/sede_detail.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ sede.secciones.escuelas.count }}</h3></p>
+                        <h3 class="text-right">{{ sede.escuelas.count }}</h3></p>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ sede.secciones.departamentos.count }}</h3></p>
+                        <h3 class="text-right">{{ sede.departamentos.count }}</h3></p>
                     </div>
                 </div>
             </div>
