--- a/inventario/templates/inventario/equipo/lista.html
+++ b/inventario/templates/inventario/equipo/lista.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-sm-12 col-md-6 offset-md-3">
+        <div class="col-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Listado de Equipos</h4>
