--- a/perfiles/templates/perfiles/consulta.html
+++ b/perfiles/templates/perfiles/consulta.html
@@ -13,7 +13,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Listado de Profesores</h4>
 
-                    {% if perfiles %}
+{#                    {% if perfiles %}#}
                         <div class="table-responsive">
                             <table class="table" id="profesores">
                                 <thead>
@@ -42,11 +42,11 @@
                                 </tbody>
                             </table>
                         </div>
-                    {% else %}
-                        <div class="alert alert-info" role="alert">
-                            No hay profesores registrados en su facultad.
-                        </div>
-                    {% endif %}
+{#                    {% else %}#}
+{#                        <div class="alert alert-info" role="alert">#}
+{#                            No hay profesores registrados en su facultad.#}
+{#                        </div>#}
+{#                    {% endif %}#}
 
                 </div>
             </div>
