Corregir urls y plantillas.
Signed-off-by: Jose A. Lopez <jose.a.lopez0591@gmail.com>

--- a/templates/includes/header/partial_departamento_dropdown.html
+++ b/templates/includes/header/partial_departamento_dropdown.html
@@ -6,7 +6,7 @@
     </a>
     {% if request.user.perfil.departamento %}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Dashboard</a>
+            <a class="dropdown-item" href="{% url 'ubicacion:departamento' request.user.perfil.departamento.pk %}">Dashboard</a>
 
             {% if perms.ubicacion.ver_reporte_departamento %}
                 <div class="dropdown-divider"></div>
@@ -18,14 +18,14 @@
                 <a class="dropdown-item"
                    href="{% url 'perfil:profesores-departamento' request.user.perfil.departamento.pk %}">Profesores
                     <span
-                            class="badge badge-primary">{{ request.user.perfil.departamento.personal.profesores.count }}</span></a>
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.departamento.personal.profesores.count }}</span></a>
             {% endif %}
 
             {% if perms.actividades.ver_departamento %}
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'actividad:departamento' request.user.perfil.departamento.pk %}">Actividades
                     <span
-                            class="badge badge-primary">{{ request.user.perfil.departamento.actividades.count }}</span></a>
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.departamento.actividades.count }}</span></a>
             {% endif %}
 
         </div>
