--- a/templates/includes/header/partial_director_departamento_dropdown.html
+++ b/templates/includes/header/partial_director_departamento_dropdown.html
@@ -13,7 +13,8 @@
         {% endif %}
         {#  Anteproyectos y Trabajos de Grado #}
         {% if perms.estudiantes.aprobar_anteproyecto %}
-            <a class="dropdown-item" href="{% url 'estudiante:lista-anteproyectos' %}">Anteproyecto</a>
+            <a class="dropdown-item"
+               href="{% url 'estudiante:anteproyecto-escuela-pendiente' request.user.perfil.escuela.pk %}">Anteproyecto</a>
             <div class="dropdown-divider"></div>
         {% endif %}
         {# Solicitud #}
