--- a/templates/includes/header/partial_escuela_dropdown.html
+++ b/templates/includes/header/partial_escuela_dropdown.html
@@ -30,20 +30,23 @@
             <a class="dropdown-item" href="#"> Reportes</a>
             {% if perms.estudiantes.ver_estudiantes %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:lista' %}">Estudiantes <span
-                        class="badge badge-primary">{{ request.user.perfil.escuela.estudiantes.count }}</span></a>
+                <a class="dropdown-item" href="{% url 'estudiante:estudiante-escuela' request.user.perfil.escuela.pk %}">Estudiantes
+                    <span
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.estudiantes.count }}</span></a>
             {% endif %}
 
             {% if perms.estudiantes.add_anteproyecto %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:anteproyectos-unidad' %}">Anteproyectos <span
-                        class="badge badge-primary">{{ request.user.perfil.escuela.anteproyectos.all.count }}</span></a>
+                <a class="dropdown-item"
+                   href="{% url 'estudiante:anteproyecto-escuela' request.user.perfil.escuela.pk %}">Anteproyectos <span
+                        class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.anteproyectos.all.count }}</span></a>
             {% endif %}
 
             {% if perms.estudiantes.add_proyecto %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:proyectos-facultad' %}">Proyectos <span
-                        class="badge badge-primary">{{ request.user.perfil.escuela.proyectos.count }}</span></a>
+                <a class="dropdown-item" href="{% url 'estudiante:proyecto-escuela' request.user.perfil.escuela.pk %}">Proyectos
+                    <span
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.proyectos.count }}</span></a>
             {% endif %}
         </div>
     {% endif %}
