--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -20,7 +20,7 @@
                 <a class="dropdown-item"
                    href="{% url 'inventario:facultad-aulas' request.user.perfil.facultad.pk %}">Aulas
                     <span
-                            class="badge badge-primary">{{ request.user.perfil.facultad.aula_set.count }}</span></a>
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.aula_set.count }}</span></a>
             {% endif %}
 
             {% if perms.inventario.add_equipo %}
@@ -28,39 +28,39 @@
                 <a class="dropdown-item"
                    href="{% url 'inventario:facultad-equipo' request.user.perfil.facultad.pk %}">Equipos
                     <span
-                            class="badge badge-primary">{{ request.user.perfil.facultad.equipos.count }}</span></a>
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.equipos.count }}</span></a>
             {% endif %}
 
 
             {% if perms.perfiles.ver_perfil %}
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'perfil:profesores-facultad' request.user.perfil.facultad.pk %}">Profesores <span
-                        class="badge badge-primary">{{ request.user.perfil.facultad.personal.profesores.count }}</span></a>
+                        class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.personal.profesores.count }}</span></a>
             {% endif %}
 
 
             {% if perms.estudiantes.ver_estudiante %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:lista' %}">Estudiantes <span
-                        class="badge btn-outline-primary">{{ request.user.perfil.facultad.estudiantes.count }}</span></a>
+                <a class="dropdown-item" href="{% url 'estudiante:estudiante-facultad' request.user.perfil.facultad.pk %}">Estudiantes <span
+                        class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.estudiantes.count }}</span></a>
             {% endif %}
 
             {% if perms.actividades.change_actividad %}
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'actividad:facultad' request.user.perfil.facultad.pk %}">Actividades <span
-                        class="badge badge-primary">{{ request.user.perfil.facultad.actividades.count }}</span></a>
+                        class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.actividades.count }}</span></a>
             {% endif %}
 
             {% if perms.actividades.change_anteproyecto %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:anteproyectos-unidad' %}">Anteproyectos <span
-                        class="badge badge-primary">{{ request.user.perfil.facultad.anteproyectos.count }}</span></a>
+                <a class="dropdown-item" href="{% url 'estudiante:anteproyecto-facultad' request.user.perfil.facultad.pk  %}">Anteproyectos <span
+                        class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.anteproyectos.count }}</span></a>
             {% endif %}
 
             {% if perms.actividades.change_proyecto %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:proyectos-facultad' %}">Trabajos de Graduacion <span
-                        class="badge badge-primary">{{ request.user.perfil.facultad.proyectos.count }}</span></a>
+                <a class="dropdown-item" href="{% url 'estudiante:proyecto-facultad' request.user.perfil.facultad.pk %}">Trabajos de Graduacion <span
+                        class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.proyectos.count }}</span></a>
             {% endif %}
 
 
