Crear archivos de carga para pruebas, remover TODOs

--- a/templates/includes/header/partial_accounts_dropdown.html
+++ b/templates/includes/header/partial_accounts_dropdown.html
@@ -14,7 +14,7 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">Notificaciones</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'solicitud:propias' %}">Solicitudes</a>  <!--TODO: Crear vista -->
+        <a class="dropdown-item" href="{% url 'solicitud:propias' %}">Solicitudes</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'actividad:propias' %}">Mis Actividades</a>
         <div class="dropdown-divider"></div>
