--- a/templates/includes/header/partial_escuela_dropdown.html
+++ b/templates/includes/header/partial_escuela_dropdown.html
@@ -1,22 +1,3 @@
-{#<li class="nav-item dropdown">#}
-{#    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"#}
-{#       data-toggle="dropdown" aria-haspopup="true"#}
-{#       aria-expanded="false">#}
-{#        Mi Escuela <i class="far fa-building"></i>#}
-{#    </a>#}
-{#    {% if request.user.perfil.unidad %}#}
-{#        <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
-{#            <a class="dropdown-item" href="#">Estudiantes <span#}
-{#                    class="badge badge-primary">{{ request.user.perfil.escuela.estudiantes.count }}</span></a>#}
-{#            <a class="dropdown-item" href="#">Anteproyectos <span#}
-{#                    class="badge badge-primary">{{ request.user.perfil.escuela.anteproyectos.count }}</span></a>#}
-{#            <a class="dropdown-item" href="#">Proyectos de Grado <span#}
-{#                    class="badge badge-primary">{{ request.user.perfil.escuela.proyectos.count }}</span></a>#}
-{#            <a class="dropdown-item" href="#">Reportes</a>#}
-{#        </div>#}
-{#    {% endif %}#}
-{#</li>#}
-
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
        data-toggle="dropdown" aria-haspopup="true"
@@ -25,12 +6,14 @@
     </a>
     {% if request.user.perfil.escuela %}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'ubicacion:escuela' request.user.perfil.escuela.pk %}"> Dashboard</a>
+            <a class="dropdown-item" href="{% url 'ubicacion:escuela' request.user.perfil.escuela.pk %}"><i
+                    class="fas fa-chart-pie"></i> Dashboard</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"> Reportes</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-file-alt"></i> Reportes</a>
             {% if perms.estudiantes.ver_estudiantes %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:estudiante-escuela' request.user.perfil.escuela.pk %}">Estudiantes
+                <a class="dropdown-item"
+                   href="{% url 'estudiante:estudiante-escuela' request.user.perfil.escuela.pk %}">Estudiantes
                     <span
                             class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.estudiantes.count }}</span></a>
             {% endif %}
